# book-fk-crawler

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: config.py  db.py  models.py
src/api/: __init__.py  dependencies.py  exceptions.py  routes.py  schemas.py  services.py
src/crawler/: fetcher.py  main.py  manager.py  models.py  parser.py  utils.py
src/scheduler/: celery.py  tasks.py  utils.py
src/tests/: conftest.py
src/tests/api/: conftest.py  test_books.py  test_changes.py
src/tests/utilities/: test_utils.py
src/utilities/: constants.py  utils.py
