[project]
name = "god-abeg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beanie==2.0.1",
    "beautifulsoup4==4.14.2",
    "httpx==0.28.1",
    "lxml==6.0.2",
    "pydantic==2.12.4",
    "pydantic-settings==2.12.0",
    "tenacity==9.1.2",
]
