[project]
name = "god-abeg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgi-lifespan==2.1.0",
    "beanie==2.0.1",
    "beautifulsoup4==4.14.2",
    "celery==5.5.3",
    "fastapi==0.122.0",
    "fastapi-limiter==0.1.6",
    "httpx==0.28.1",
    "lxml==6.0.2",
    "pydantic==2.12.4",
    "pydantic-settings==2.12.0",
    "pytest==9.0.1",
    "pytest-asyncio==1.3.0",
    "redis==7.1.0",
    "tenacity==9.1.2",
    "uvicorn==0.38.0",
]

[dependency-groups]
dev = [
    "black==25.11.0",
    "isort==7.0.0",
]
